--- a/ThietKeWeb/Views/Home/DichVu.cshtml
+++ b/ThietKeWeb/Views/Home/DichVu.cshtml
@@ -4,7 +4,10 @@
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
 <style type="text/css">
-
+    section {
+        font-size: 24px;
+        background-color: white;
+    }
    
     h1 {
         padding: 20px;
