--- a/ThietKeWeb/Views/Home/RecruitDetail.cshtml
+++ b/ThietKeWeb/Views/Home/RecruitDetail.cshtml
@@ -1,14 +1,15 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "RecruitDetail";
+    Layout = "~/Views/Shared/_LayoutTuyenDung.cshtml";
 }
 <style>
-   .Content p {
+    .Content p {
         font-weight: bold;
         color: #4B7864;
     }
 
     ul li {
+        color: #4f4f4f;
         font-size: 20px;
         font-style: italic;
         font-family: Arial;
@@ -46,7 +47,3 @@
 
     </ul>
 </div>
-
-
-
-
