--- a/ThietKeWeb/Views/Shared/_LayoutTuyendung.cshtml
+++ b/ThietKeWeb/Views/Shared/_LayoutTuyendung.cshtml
@@ -1,11 +1,12 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <style>
-           /*--------------header-----------------*/
+        /*--------------header-----------------*/
         .header {
             background-color: #4B7864;
             display: flex;
@@ -42,7 +43,9 @@
             color: white;
             font-size: 18px;
             clear: both;
-            display: flex; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
 
@@ -97,32 +100,33 @@
 
         @*hình ảnh tuyển dụng*@
 
+        <img src="~/Content/images/Recruit.jpg" />
 
         <div>
             @RenderBody()
         </div>
     </div>
-        <div class="footer">
-            <div>
-                <img src="~/Content/images/fb-icon.png" class="fb-icon-image" />
-                <img src="~/Content/images/ins-icon.png" class="ins-icon-image" />
-                <img src="~/Content/images/tw-icon.png" class="tw-icon-image" />
-            </div>
-            <div>
-                <p>&copy;  2018 Baron Coffee.  Powered by Group Baron</p>
-            </div>
-            <div>
-                <img src="~/Content/images/phone-icon.png" class="phone-icon-image" />
-            </div>
-            <div>
-                <p>0245269466</p>
-            </div>
-            <div>
-                <img src="~/Content/images/email-icon.png" class="email-icon-image" />
-            </div>
-            <div>
-                <p>customerservice@Baroncoffee.com.vn</p>
-            </div>
+    <div class="footer">
+        <div>
+            <img src="~/Content/images/fb-icon.png" class="fb-icon-image" />
+            <img src="~/Content/images/ins-icon.png" class="ins-icon-image" />
+            <img src="~/Content/images/tw-icon.png" class="tw-icon-image" />
         </div>
+        <div>
+            <p>&copy;  2018 Baron Coffee.  Powered by Group Baron</p>
+        </div>
+        <div>
+            <img src="~/Content/images/phone-icon.png" class="phone-icon-image" />
+        </div>
+        <div>
+            <p>0245269466</p>
+        </div>
+        <div>
+            <img src="~/Content/images/email-icon.png" class="email-icon-image" />
+        </div>
+        <div>
+            <p>customerservice@Baroncoffee.com.vn</p>
+        </div>
+    </div>
 </body>
 </html>
