--- a/ThietKeWeb/Views/Home/NgheNghiep.cshtml
+++ b/ThietKeWeb/Views/Home/NgheNghiep.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "NgheNghiep";
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
-<<style type="text/css">
+<style type="text/css">
     section {
         font-size: 24px;
         background-color: white;
