--- a/ThietKeWeb/Views/Home/AboutUs.cshtml
+++ b/ThietKeWeb/Views/Home/AboutUs.cshtml
@@ -77,7 +77,7 @@
             </div>
         </div>
     </a>
-    <a href="~/Home/NguonGoc">
+    <a href="~/Home/NgheNghiep">
         <div class="banner" style="background-color: #b3bbbe">
             <div>
                 <img src="~/Content/images/NgheNghiep1.jpg" width="630" height="380" class="content"/>
