--- a/ThietKeWeb/Views/Home/Recruit.cshtml
+++ b/ThietKeWeb/Views/Home/Recruit.cshtml
@@ -155,7 +155,7 @@
 
         @*hình ảnh tuyển dụng*@
 
-        <img src="~/Content/images/tuyển dụng.jpg" />
+        <img src="~/Content/images/Recruit.jpg" />
 
 
 
@@ -186,7 +186,7 @@
                 </tr>
                 <tr>
                     <td> Marketing </td>
-                    <td><a href="#"> Tìm hiểu </a></td>
+                    <td><a href="~/Home/RecruitDetail"> Tìm hiểu </a></td>
                 </tr>
 
             </table>
