chỉnh lỗi nhỏ tiếp:))

--- a/ThietKeWeb/Views/Home/DaXay.cshtml
+++ b/ThietKeWeb/Views/Home/DaXay.cshtml
@@ -20,7 +20,7 @@
 </style>
 
 <div>
-    <h2>TRÀ</h2>
+    <h2>ĐÁ XAY</h2>
     <p>
         Đá xay là một loại thức uống mát lạnh, được pha chế bằng cách xay nhuyễn đá cùng các nguyên liệu khác như sữa, kem, cà phê, trái cây, hoặc siro để tạo ra một kết cấu đặc, mịn và có hương vị thơm ngon.
         Đá xay còn được biết đến với tên gọi "frappe" hoặc "smoothie," tùy thuộc vào thành phần và hương vị.
