--- a/ThietKeWeb/Views/Home/Khac.cshtml
+++ b/ThietKeWeb/Views/Home/Khac.cshtml
@@ -20,7 +20,7 @@
 </style>
 
 <div>
-    <h2>TRÀ</h2>
+    <h2>KHÁC</h2>
     <p>
         Gồm nhiều thức uống khác như là Matcha, Chanh Tắc Mật Ong, Soda Chanh và các loại trà sữa khác nhau..
     </p>
