--- a/ThietKeWeb/Views/Home/AboutUs.cshtml
+++ b/ThietKeWeb/Views/Home/AboutUs.cshtml
@@ -1,9 +1,10 @@
 ﻿
 @{
     ViewBag.Title = "AboutUs";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
+<link rel="stylesheet" href="~/Content/Layout.css" />
 <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
         const contentDivs = document.querySelectorAll('.content');
