--- a/ThietKeWeb/Views/Home/Address.cshtml
+++ b/ThietKeWeb/Views/Home/Address.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Address";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -9,9 +9,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baron Drinks</title>
+    <link rel="stylesheet" href="~/Content/Layout.css" />
     <style>
         table {
-            width: 100%;            
+            width: 100%;
             border-collapse: collapse;
         }
 
@@ -40,8 +41,9 @@
             margin-bottom: 10px;
             color: deeppink;
         }
+
         div {
-            text-align:center;
+            text-align: center;
         }
     </style>
 </head>
