--- a/ThietKeWeb/Views/Home/CaPhe.cshtml
+++ b/ThietKeWeb/Views/Home/CaPhe.cshtml
@@ -1,14 +1,15 @@
 ﻿
 @{
     ViewBag.Title = "CaPhe";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
+<link rel="stylesheet" href="~/Content/Layout.css" />
 <style>
     h2 {
-        color:red;
+        color: #36100a;
         font-size: 40px;
-        margin-top:40px;
+        margin-top: 40px;
     }
     .prod {
         display: block;
