--- a/ThietKeWeb/Views/Home/DichVu.cshtml
+++ b/ThietKeWeb/Views/Home/DichVu.cshtml
@@ -1,8 +1,9 @@
 ﻿
 @{
     ViewBag.Title = "DichVu";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
+<link rel="stylesheet" href="~/Content/Layout.css" />
 <style type="text/css">
     section {
         font-size: 24px;
