--- a/ThietKeWeb/Views/Home/Index.cshtml
+++ b/ThietKeWeb/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
-
+<link rel="stylesheet" href="~/Content/Layout.css" />
 <div>
     <section>
         <img src="~/Content/images/banner9.png" class="image1" />
@@ -15,7 +15,7 @@
             <h2>Các thức uống phổ biến hiện nay</h2>
         </div>
         <div class="prod-container-2">
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/CaPheDen">
                     <img src="~/Content/images/sp1.png" class="prod-item-special2" />
                     <h3>Cà phê đen</h3>
@@ -23,63 +23,63 @@
                 </a>
             </div>
 
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/BacSiu">
                     <img src="~/Content/images/sp3.png" class="prod-item-special2" />
                     <h3>Bạc Sỉu</h3>
                     <p class="prod-price">20.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/SodaChanh">
                     <img src="~/Content/images/sp6.png" class="prod-item-special2" />
                     <h3>Soda Chanh</h3>
                     <p class="prod-price">25.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/CapheCaramel">
                     <img src="~/Content/images/sp7.png" class="prod-item-special5" />
                     <h3>Cà Phê Caramel</h3>
                     <p class="prod-price">20.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/TraNho">
                     <img src="~/Content/images/sp9.png" class="prod-item-special2" />
                     <h3>Trà Nho</h3>
                     <p class="prod-price">35.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/SocolaDaXay">
                     <img src="~/Content/images/sp12.png" class="prod-item-special2" />
                     <h3>Socola Đá Xay</h3>
                     <p class="prod-price">35.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/DauDaXay">
                     <img src="~/Content/images/sp14.png" class="prod-item-special3" />
                     <h3>Dâu Đá Xay</h3>
                     <p class="prod-price">30.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/MatchaSocolaDaXay">
                     <img src="~/Content/images/sp15.png" class="prod-item-special2" />
                     <h3>Matcha Socola Đá Xay</h3>
                     <p class="prod-price">25.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/TraVai">
                     <img src="~/Content/images/sp18.png" class="prod-item-special1" />
                     <h3>Trà Vải</h3>
                     <p class="prod-price">35.000 VND</p>
                 </a>
             </div>
-            <div class="prod">
+            <div class="prod nav-link">
                 <a href="~/ProDuctDetail/TraDen">
                     <img src="~/Content/images/sp20.png" class="prod-item-special2" />
                     <h3>Trà Đen</h3>
