--- a/ThietKeWeb/Views/Home/Tra.cshtml
+++ b/ThietKeWeb/Views/Home/Tra.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
     ViewBag.Title = "Tra";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
-
+<link rel="stylesheet" href="~/Content/Layout.css" />
 <style>
     h2 {
         color: red;
