--- a/ThietKeWeb/Views/Home/NgheNghiep.cshtml
+++ b/ThietKeWeb/Views/Home/NgheNghiep.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "NgheNghiep";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
+<link rel="stylesheet" href="~/Content/Layout.css" />
 <style type="text/css">
     section {
         font-size: 24px;
