--- a/ThietKeWeb/Views/Home/NguonGoc.cshtml
+++ b/ThietKeWeb/Views/Home/NguonGoc.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "NguonGoc";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
-
+<link rel="stylesheet" href="~/Content/Layout.css" />
 <style type="text/css">
     section {
         font-size: 24px;
