--- a/ThietKeWeb/Views/Home/Recruit.cshtml
+++ b/ThietKeWeb/Views/Home/Recruit.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Tuyển Dụng";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 <!DOCTYPE html>
 <html>
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tuyển Dụng</title>
-
+    <link rel="stylesheet" href="~/Content/Layout.css" />
     <style>
         body {
             margin: 0;
@@ -26,7 +26,7 @@
         h3 {
             margin: 0;
             font-size: 25px;
-            font-weight:bold;
+            font-weight: bold;
         }
         /*-----------------------content--------------------------*/
         .re-content {
@@ -47,9 +47,9 @@
 
         h4 {
             color: #02542D;
-            margin-top:10px;
+            margin-top: 10px;
             font-size: 23px;
-            font-weight:bold;
+            font-weight: bold;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         }
 
