--- a/ThietKeWeb/Views/ProDuctDetail/Matcha.cshtml
+++ b/ThietKeWeb/Views/ProDuctDetail/Matcha.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -29,43 +29,44 @@
         }
 
         body {
+            background-image: url('../../content/images/nensp/nenmatcha1.png');
+            background-size: cover; /* Ảnh nền phủ đầy toàn bộ */
             font-family: Arial, sans-serif;
-            font-size: 20px;
-            background-color: #f0f0f0;
             text-decoration: none;
         }
 
         .container {
             width: 100%;
             display: flex;
-            padding: 10px;
-            font-size: 30px;
+            padding: 20px;
+            font-size: 20px;
         }
 
         .image {
+            background-image: url('../../content/images/matcha.png');
+            background-position: center center;
+            background-size: cover;
+            width: 500px;
+            height: 500px;
             display: block;
-            background-color: antiquewhite;
             border: hidden;
-            width: 550px;
-            height: 600px;
-            margin-left: 50px;
-            text-align: center;
+            margin-left: 20%;
         }
 
-        form {
-            display: flex;
-        }
-
-        input {
-            margin-right: 15px;
-        }
 
         .ProdInfo {
-            padding-left: 50px;
+            padding-left: 10%;
+            padding-right: 5%;
+        }
+        label {
+            color: #44492b;
+            text-align: center;
+            font-size: 30px;
         }
 
         .ProdType {
             padding-top: 20px;
+            color: #44492b;
         }
 
         .ProdPrice {
@@ -73,26 +74,23 @@
             padding-top: 10px;
         }
 
-        a {
-            width: 200px;
-            text-align: center;
-        }
 
         #button {
-            padding-top: 85px;
+            text-align: center;
+            padding-top: 10px;
         }
 
         .ProdDescription {
             clear: both;
             padding-top: 10px;
-            padding-left: 10px;
+            color: #372A25;
         }
 
         button {
             padding: 10px 20px;
             font-size: 16px;
             color: black;
-            background-color: none;
+            background-color: #6db67c;
             border: 1px solid #cccc;
             border-radius: 5px;
             cursor: pointer;
@@ -115,31 +113,29 @@
             <img src="~/Content/images/sp2.png" width="500" height="500" style="margin-top:30px"/>
         </div>
         <div class="ProdInfo">
-            <label>Matcha</label>
+            <label><strong>Matcha</strong></label>
             <p class="ProdPrice">25.000 VND</p>
+            <div class="ProdDescription">
+            <label>Mô tả sản phẩm</label>
+            <p>
+                <small>
+                    Matcha được tạo nên từ các lá trà xanh trải qua nhiều công đoạn phức tạp để có được loại bột trà mịn và có màu xanh tươi.
+                    Bột trà xanh matcha Lúave với 100% là bột Matcha từ Nhật Bản, đảm bảo được về chất lượng khi đến với tay khách hàng.
+                </small>
+            </p>
+            </div>
             <p class="ProdType">Chọn size (bắt buộc)</p>
             <div class="group">
                 <button class="optionButton" data-group="1" onclick="selectOption(this)">Nhỏ + 0 đ</button>
                 <button class="optionButton" data-group="1" onclick="selectOption(this)">Vừa + 10.000 đ</button>
-                <button class="optionButton" data-group="1" onclick="selectOption(this)">Lớn + 16.000 đ</button>
+                <button class="optionButton" data-group="1" onclick="selectOption(this)">Lớn + 15.000 đ</button>
             </div>
-            <p class="ProdType">Topping</p>
-            <div class="group">
-                <button class="optionButton" data-group="2" onclick="selectOption(this)">Trân Châu + 10.000 đ</button>
-                <button class="optionButton" data-group="2" onclick="selectOption(this)">Thạch Trái Cây + 10.000 đ</button>
-                <button class="optionButton" data-group="2" onclick="selectOption(this)">Kem tươi + 10.000 đ</button>
-            </div>
+            
             <div id="button">
                 <a href="~/Home/Index" class="btn btn-success">Đặt mua hàng</a>
             </div>
         </div>
     </div>
-    <div class="ProdDescription">
-        <label>Mô tả sản phẩm</label>
-        <p>
-            Matcha được tạo nên từ các lá trà xanh trải qua nhiều công đoạn phức tạp để có được loại bột trà mịn và có màu xanh tươi.
-            Bột trà xanh matcha Lúave với 100% là bột Matcha từ Nhật Bản, đảm bảo được về chất lượng khi đến với tay khách hàng.
-        </p>
-    </div>
+    
 </body>
 </html>
