--- a/ThietKeWeb/Views/Shared/_MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/_MasterLayout.cshtml
@@ -3,7 +3,11 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=" 1.0"" />
     <title>@ViewBag.Title</title>
-  
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <style type="text/css">
         * {
             margin: 0;
@@ -12,8 +16,8 @@
         }
 
         body {
-            margin:0;
-            padding:0;
+            margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
             font-size: 20px;
             font-weight: bold;
@@ -21,6 +25,7 @@
             text-decoration: none;
             max-width: 1920px;
         }
+
         li {
             list-style-type: none;
         }
@@ -95,11 +100,11 @@
             height: 29px;
             border-radius: 8px;
         }
-/*icon mua hàng*/
+        /*icon mua hàng*/
         .cart {
             position: relative;
         }
-        
+
         .cart-count {
             position: absolute;
             right: -17px;
@@ -111,15 +116,14 @@
             font-size: 14px;
         }
 
-       .menu {
+        .menu {
             display: flex;
         }
 
-        .menu a {
-            color: white;
-            font-size: 18px;
-            
-        }
+            .menu a {
+                color: white;
+                font-size: 18px;
+            }
 
         #selection {
             margin-right: 35px;
@@ -135,23 +139,23 @@
         .list-background {
             width: 100%;
             height: fit-content;
-            margin-top:8px;
-            padding:0;
+            margin-top: 8px;
+            padding: 0;
         }
 
-            .list {
-                display: flex;
-                align-items: center;
-                justify-content: space-around;
-                
+        .list {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+            .list li a {
+                width: fit-content;
             }
-                .list li a {
-                    width: fit-content;
-                }
-              
+
         /* thanh menu */
         .menu1 {
-            font-size:20px;
+            font-size: 20px;
             color: white;
             display: inline-block;
             block-size: 35px;
@@ -171,10 +175,10 @@
             }
 
         /*thành phần trong thanh menu : trang chủ, thực đơn,...*/
-       
+
 
         /*-------------------------------------------- body trang home ------------------------------------------------------------------*/
-       
+
 
         .image2 {
             display: block;
@@ -191,7 +195,7 @@
         }
 
 
-        
+
 
         .prod-name {
             display: flow;
@@ -316,7 +320,7 @@
             margin: 0;
         }
 
-        
+
 
         .prod-price {
             font-size: 12px;
@@ -379,7 +383,26 @@
                     </a>
                 </li>
                 @*--------------------------------------------------------------------login--------------------------------*@
-                <li><a href="~/Home/LogIn" id="selection"><img src="~/Content/images/Character-icon.png" class="selection-image" />Tài khoản</a></li>
+                <li class="dropdown">
+                    @if (Session["Username"] != null)
+                    {
+                        <a href="#" data-toggle="dropdown" class="dropdown-toggle" id="selection"><img src="~/Content/images/Character-icon.png" class="selection-image" />@Session["Username"]</a>
+                        <div class="dropdown-menu">
+                            @Html.ActionLink("Thông tin tài khoản", "ProfileInfo", "Account", new { area = "" }, new { @class = "dropdown-item", @style = "color: black" })
+                            @Html.ActionLink("Đổi mật khẩu", "ChangePassword", "Account", new { area = "" }, new { @class = "dropdown-item", @style = "color: black" })
+                            <div class="dropdown-divider"></div>
+                            @Html.ActionLink("Đăng xuất", "Logout", "Account", new { area = "" }, new { @class = "dropdown-item", @style = "color: black" })
+                        </div>
+                    }
+                    else
+                    {
+                        <a href="#" data-toggle="dropdown" class="dropdown-toggle" id="selection"><img src="~/Content/images/Character-icon.png" class="selection-image" />Tài khoản</a>
+                        <div class="dropdown-menu">
+                            @Html.ActionLink("Đăng nhập", "Login", "Account", new { area = "" }, new { @class = "dropdown-item", @style = "color: black" })
+                            @Html.ActionLink("Đăng ký", "Register", "Account", new { area = "" }, new { @class = "dropdown-item", @style = "color: black" })
+                        </div>
+                    }
+                </li>
             </ul>
 
         </div>
